--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Sagva/nodejs-course#readme",
   "devDependencies": {
+    "body-parser": "^1.19.1",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
