--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.7.2",
     "nodemailer-mailgun-transport": "^2.1.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.13.0",
     "pug": "^2.0.3",
     "sequelize": "^5.0.0-beta.11"
   }
