--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/Sagva/nodejs-course#readme",
   "dependencies": {
     "body-parser": "^1.19.1",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-validator": "^6.14.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
