--- a/shop/package.json
+++ b/shop/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "helmet": "^5.0.2",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "multer": "^1.4.4",
