--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Complete Node.js Guide",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "chai": "^4.3.6",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
@@ -24,6 +25,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "mocha": "^9.2.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "multer": "^1.4.4",
