--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "mocha": "^9.2.0",
     "mongoose": "^6.1.8",
     "multer": "^1.4.4",
+    "sinon": "^12.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
