--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.13"
   }
 }
