--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/Sagva/nodejs-course#readme",
   "dependencies": {
-    "body-parser": "^1.19.1",
     "express": "^4.17.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.13"
+    "@types/node": "^17.0.13",
+    "body-parser": "^1.19.1"
   }
 }
